deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: devsecops-app-deployment
spec:
  replicas: 2
  selector:
    matchLabels:
      app: devsecops-app
  template:
    metadata:
      labels:
        app: devsecops-app
    spec:
      securityContext:
        fsGroup: 1000
      containers:
      - name: devsecops-app
        image: shipravashist/devsecops-demo:v3
        securityContext:
          runAsUser: 1000
          runAsGroup: 1000
          runAsNonRoot: true
          allowPrivilegeEscalation: false
          capabilities:
            drop:
              - ALL
          readOnlyRootFilesystem: true
        resources:
          limits:
            cpu: "500m"
            memory: "256Mi"
          requests:
            cpu: "250m"
            memory: "128Mi"
