grafana-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: grafana-nodeport
  labels:
    app: grafana
spec:
  type: NodePort
  selector:
    app.kubernetes.io/name: grafana
  ports:
    - port: 3000
      targetPort: 3000
      nodePort: 30000
