service.yaml
apiVersion: v1
kind: Service
metadata:
  name: devsecops-app-service
spec:
  type: NodePort
  selector:
    app: devsecops-app
  ports:
    - protocol: TCP
      port: 5000
      targetPort: 5000
      nodePort: 30007
