networkpolicy.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: devsecops-app-network-policy
  namespace: default
spec:
  podSelector:
    matchLabels:
      app: devsecops-app
  policyTypes:
  - Ingress
  ingress:
  - from:
    - podSelector: {}   # allow from all pods in the namespace (can tighten later)
    ports:
    - protocol: TCP
      port: 80
